# Canvas

./: CMakeLists.txt  ScribbleArea.cpp  ScribbleArea.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
